--- a/Project01/Config/DefaultEngine.ini
+++ b/Project01/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Project01
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/AttackMap.AttackMap
+EditorStartupMap=/Game/Maps/GolemMap.GolemMap
 GameDefaultMap=/Game/Maps/AttackMap.AttackMap
 TransitionMap=
 bUseSplitscreen=True
