--- a/Project01/Config/DefaultEngine.ini
+++ b/Project01/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=Project01
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/GolemMap.GolemMap
-GameDefaultMap=/Game/Maps/AttackMap.AttackMap
+GameDefaultMap=/Game/Maps/GolemMap.GolemMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
